# project_rtracer

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  globals.h  image.h  interval.c  interval.h  main.c  main.cc  point3.c  point3.h  ray.c  ray.h  render.cu  render.cuh  render.h  sphere.c  sphere.h  utils.c  utils.h
